fix the ui problem overflow;

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -5,6 +5,7 @@
 body {
     font-family: "Montserrat", sans-serif;
     margin: 0;
+    padding: 0;
     background: #f6f5f7;
     overflow-x: hidden;
 }
